# owl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt  demo.cpp  lua.cpp  socket_client.cpp  socket_server.cpp
demo/websocketclient/: index.html  style.css
ext/: FindGTest.cmake  FindLZ4.cmake  FindLua.cmake  FindSmallSHA1.cmake
ext/gtest/: CMakeLists.txt
ext/lua/: CMakeLists.txt
ext/lz4/: CMakeLists.txt
ext/smallsha1/: CMakeLists.txt  LICENCE
include/owl/: owl
include/owl/data/: any.h  any.inl  buffer.h  dictionary.h  serializer.h  serializer.inl  threadsafemap.hpp  threadsafevector.hpp  typeinfo.h
include/owl/designpattern/: singleton.hpp
include/owl/filesystem/: binaryfile.h  filesystem.h
include/owl/logging/: log.h  logmanager.h  logmanager.inl  streamlog.h
include/owl/lua/: lua.h
include/owl/network/: socket.h  tcpclient.h  tcpserver.h  tcpsocket.h  tcpsocketconnection.h  websocket.h
include/owl/signal/: signal.h
include/owl/time/: time.h  timer.h
src/: CMakeLists.txt  owl.cpp
src/data/: any.cpp  buffer.cpp  dictionary.cpp  serializer.cpp  typeinfo.cpp
src/filesystem/: binaryfile.cpp  filesystem.cpp
src/logging/: log.cpp  logmanager.cpp  streamlog.cpp
src/lua/: lua.cpp
src/network/: socket.cpp  tcpclient.cpp  tcpserver.cpp  tcpsocket.cpp  tcpsocketconnection.cpp  websocket.cpp
src/signal/: signal.cpp
src/time/: time.cpp  timer.cpp
test/: CMakeLists.txt  main.cpp  test_any.inl  test_binaryfile.inl  test_buffer.inl  test_common.inl  test_dictionary.inl  test_serializer.inl  test_typeinfo.inl
